--- a/dataCenter/pom.xml
+++ b/dataCenter/pom.xml
@@ -43,6 +43,12 @@
             <version>0.0.1</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
         <!-- MySQL Connector -->
         <dependency>
             <groupId>mysql</groupId>
